--- a/Chess/Chess/Base.lproj/Main.storyboard
+++ b/Chess/Chess/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                         <viewLayoutGuide key="safeArea" id="AuQ-ke-Wb6"/>
                     </view>
                     <connections>
-                        <segue destination="Pco-Fs-bqh" kind="unwind" identifier="unwindToMainViewController" unwindAction="unwindToMainViewControllerWithSegue:" id="9Nh-vj-vNQ"/>
+                        <segue destination="Pco-Fs-bqh" kind="unwind" identifier="unwindFromBoardViewControllerToMainViewController" unwindAction="unwindFromBoardViewControllerToMainViewControllerWithSegue:" id="9Nh-vj-vNQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eO5-C5-Nmw" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -131,6 +131,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qa7-uF-A87" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2478" y="54"/>
+        </scene>
+        <!--How To Play-->
+        <scene sceneID="FGU-Fg-6Qp">
+            <objects>
+                <viewController id="cux-ax-Wl8" customClass="HowToPlay" customModule="Chess" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NJ0-tQ-8MB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="CJk-fD-G0e"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6sw-Re-w82" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3200" y="57"/>
         </scene>
     </scenes>
 </document>
